# anseropolis

./: .env.example  .gitignore  AGENT.md  README.md  gemini-mcp-config.json  pyproject.toml  setup.py
.claude/: instructions.md
.claude/skills/: setup.md  teaching.md
.opencode/rules/: teaching.md
cross_topic/: REPORT.md  config.yaml  pipeline.py
data/: DATA_NOTICE.md  custom_dict.txt  political_fingerprints.json  public_index.json  suspect_lexicon.yaml  tao_lexicon.yaml  tao_ngram_embeddings.npz  watchlist.json
doc/: ARCHITECTURE.md  GUIDE.md  MANUAL.md  pipeline-design.md  requirement.md  tea-goose-skill.md
scripts/: scrape_crntt.py  scrape_ltn.py  scrape_media.py  scrape_upmedia.py  setup.sh
src/: agent.py  config.py  decompose.py  diff.py  enrich.py  ingest.py  intake_cron.py  interactive.py  llm.py  match.py  mcp_server.py  package.py  render.py  retrieve.py  run.py  score.py  serve.py
templates/: card.html
tests/: e2e_50_results.json  e2e_50v2_results.json  e2e_results.json  e2e_results.md  fixtures.json  fixtures_50.json  fixtures_50v2.json  fixtures_cti.json  fixtures_exotic.json  fixtures_full.json  run_all.py
